# ytdlp_scripts

./: README.md  pyproject.toml
src/ytdlp_scripts/: main.py
