[project]
name = "ytdlp-scripts"
authors = [{ name = "crxwns" }]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["yt-dlp>=2024.8.6"]

[project.scripts]
missing = "ytdlp_scripts.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["D", "TRY", "EM101", "EM102", "FBT", "T201"]

[tool.pyright]
typeCheckingMode = "strict"
